package com.example.refreshmentpoint;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SearchRefreshmentPointApplication {

	public static void main(String[] args) {
		SpringApplication.run(SearchRefreshmentPointApplication.class, args);
	}

}
